# DECODE_Cloud_UserAPI

./: .env.example  README.md  application_config.yaml  pyproject.toml  requirements.txt
.github/workflows/: code-checks.yaml  publish-version-ecr.yaml  publish-version.yaml
api/: database.py  dependencies.py  exceptions.py  main.py  models.py  notifications.py  queue.py  settings.py  tags.py
api/core/: auth.py  aws.py  database.py  filesystem.py  notifications.py
api/crud/: job.py
api/endpoints/: access.py  auth.py  auth_get.py  files.py  job_update.py  jobs.py  token.py  user.py
api/schemas/: common.py  file.py  job.py  job_update.py  token.py  user.py
frontend/: README.md  package-lock.json
frontend/src/: App.vue  main.js
frontend/src/components/: JobCreationForm.vue  NavBar.vue
frontend/src/router/: index.js
frontend/src/services/: jobService.js
frontend/src/views/: JobsView.vue
scripts/: docker.py  serve.py
tests/: conftest.py
tests/integration/: conftest.py  test_main.py
tests/integration/endpoints/: conftest.py  test_files.py  test_job_update.py  test_jobs.py
tests/unit/core/: test_filesystem.py
tests/unit/endpoints/: test_files.py  test_job_update.py  test_jobs.py
