[tool.poetry]
name = "api"
version = "0.1.2"
description = "User-facing API of DECODE OpenCloud."
authors = ["Arthur Jaques <arthur.jaques@hispeed.ch>"]
readme = "README.md"
requires-poetry = "2.1.3"

[tool.poetry.dependencies]
python = "3.11.10"
boto3 = "^1.35.64"
botocore = "^1.35.64"
python-dotenv = "^1.0.1"
fastapi = "^0.115.5"
fastapi-cloudauth = "^0.4.3"
fastapi-utils = "^0.8.0"
httpx = "^0.27.2"
pydantic = "^2.9.2"
requests = "^2.32.3"
gunicorn = "^23.0.0"
uvicorn = "^0.32.0"
typing-inspect = "^0.9.0"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.36"
humanize = "^4.11.0"
mailjet-rest = "^1.3.4"
python-multipart = ">=0.0.18"
pyyaml = "^6.0.2"
boto3-stubs = {extras = ["full"], version = "^1.35.86"}

[tool.poetry.group.dev.dependencies]
botocore-stubs = "^1.35.64"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
pytest = "^8.3.3"
ruff = "^0.7.4"
types-requests = "^2.32.0.20241016"
pytest-cov = "^6.0.0"
docker = "^7.1.0"
toml = "^0.10.2"
types-toml = "^0.10.8.20240310"
types-docker = "^7.1.0.20240827"
types-boto3 = "^1.0.2"
ipython = "^8.29.0"
types-pyyaml = "^6.0.12.20240917"
moto = "^5.0.21"

[build-system]
requires = ["poetry-core==1.9.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
docker-build = "scripts.docker:build"
docker-serve = "scripts.docker:serve"
docker-stop = "scripts.docker:stop"
docker-cleanup = "scripts.docker:cleanup"
serve = "scripts.serve:main"

[tool.pytest.ini_options]
markers = [
    "aws: requires aws credentials"
]
addopts = "-m 'not aws'"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"api/main.py" = ["E402"]
"tests/conftest.py" = ["E402"]

[tool.mypy]
strict = true
